feat: Add script to handle logic for creating, transferring certificate and displaying blockchain (API Interaction between frontend and backend)

--- a/client/style.css
+++ b/client/style.css
@@ -58,6 +58,10 @@ h2 {
     max-height: 290px;
     overflow: auto;
 }
+.blockchain-box {
+    color: #2b049f;
+    font-size: 13px;
+}
 .input-box {
     display: flex;
     flex-direction: column;
