--- a/client/style.css
+++ b/client/style.css
@@ -1,4 +1,6 @@
-* {
+*,
+*::before,
+*::after {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -16,7 +18,6 @@ header {
     justify-content: center;
 }
 img {
-    /* display: inline-block; */
     width: 44px;
 }
 h1 {
@@ -118,5 +119,22 @@ h2 {
 @media (max-width: 1000px) {
     .container {
         grid-template-columns: 1fr;
+        padding: 0;
+    }
+}
+
+@media (max-width: 440px) {
+    .block {
+        width: 310px;
+        padding: 16px;
+    }
+    .box {
+        padding: 16px 16px;
+}
+    h1 {
+        margin: 40px 0;
+    }
+    header {
+        padding: 0 20px;
     }
 }
